--- a/src/app/components/user-login/user-login.component.html
+++ b/src/app/components/user-login/user-login.component.html
@@ -1,1 +1,21 @@
-<p>user-login works!</p>
+<div class="form-login my-5 p-3 border rounded bg-light">
+
+    <h3 class="text-center">Login</h3>
+
+    <form (ngSubmit)="onSubmit()">
+
+        <div class="form-group">
+            <small for="privateKey">Private key</small>
+            <input id="privateKey" class="form-control" type="text" name="privateKey" />
+        </div>
+
+        <div class="text-danger text-center mb-3">{{error}}</div>
+        <input type="submit" name="login" class="btn btn-primary mb-3 col" value="Login" />
+
+        <div class="text-center">
+            Don't have a wallet? <a routerLink="/register">Create one here</a>
+        </div>
+
+    </form>
+
+</div>
