--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -1,3 +1,30 @@
-<div class="d-flex pt-3 pb-2 mb-3 border-bottom">
-    <h1 class="h2">Dashboard</h1>
+<h1 class="h2">Dashboard</h1>
+
+<div class="row">
+    <div class="col-lg-4 mb-3">
+        <div class="card border border-primary shadow">
+            <div class="card-body">
+                <small class="card-text">Username</small>
+                <h5 class="card-title">jakob99</h5>
+                <small class="card-text">Address</small>
+                <p class="card-text">lnivnjfalfdvshnv84zv390vnpervnu2934rvu8</p>
+            </div>
+        </div>
+    </div>
+    <div class="col-lg-8">
+        <div class="card border shadow">
+            <div class="card-header" routerLink="/transactions">Transactions</div>
+            <div class="card-body p-0">
+                <table class="table m-0">
+                    <tbody>
+                        <tr>
+                            <td>Who</td>
+                            <td>When</td>
+                            <td>What</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
 </div>
