--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -1,5 +1,5 @@
-<nav class="navbar navbar-dark sticky-top flex-md-nowrap bg-dark p-0 shadow">
-    <a class="navbar-brand col-md-3 col-lg-2 px-3 py-2" routerLink="/">Blockchain</a>
+<nav class="navbar navbar-dark sticky-top bg-dark p-0 shadow">
+    <a class="navbar-brand px-3 py-2" routerLink="/">Blockchain</a>
 
     <ul class="navbar-nav px-3">
         <li class="nav-item text-nowrap">
@@ -8,13 +8,8 @@
     </ul>
 </nav>
 
-<div class="container-fluid">
-    <div class="row">
-        <nav class="col-md-3 col-lg-2 d-md-block bg-light sidebar">
-
-        </nav>
-        <main class="col-md-9 ml-sm-auto col-lg-10 px-md-4">
-            <router-outlet></router-outlet>
-        </main>
-    </div>
+<div class="row">
+    <main class="col-md-9 mx-md-auto col-lg-10 px-md-4 px-4 py-3">
+        <router-outlet></router-outlet>
+    </main>
 </div>
