--- a/src/app/components/transactions/transactions.component.html
+++ b/src/app/components/transactions/transactions.component.html
@@ -1,3 +1,4 @@
-<div class="d-flex pt-3 pb-2 mb-3 border-bottom">
-    <h1 class="h2">Transactions</h1>
-</div>
+<h1 class="h2">
+    <a class="material-icons nav-link" routerLink="/">chevron_left</a>
+    Transactions
+</h1>
