Dashboard binding, login and register with username

--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -5,9 +5,9 @@
         <div class="card border border-primary shadow">
             <div class="card-body">
                 <small class="card-text">Username</small>
-                <h5 class="card-title">jakob99</h5>
-                <small class="card-text">Address</small>
-                <p class="card-text">lnivnjfalfdvshnv84zv390vnpervnu2934rvu8</p>
+                <h5 class="card-title">{{getUsername()}}</h5>
+                <small class="card-text">Wallet address</small>
+                <textarea class="form-control form-control-sm" readonly rows="3" style="resize: none">{{getAddress()}}</textarea>
             </div>
         </div>
     </div>
