--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -7,18 +7,20 @@
                 <small class="card-text">Username</small>
                 <h5 class="card-title">{{getUsername()}}</h5>
                 <small class="card-text">Wallet address</small>
-                <textarea class="form-control form-control-sm" readonly rows="3"
-                    style="resize: none">{{getAddress()}}</textarea>
+                <textarea class="form-control form-control-sm" readonly
+                    style="resize: none;" rows="4">{{ this.wallet.getPublic() }}</textarea>
             </div>
         </div>
 
-        <div class="card border-danger shadow mb-3">
+        <div class="card border-{{ this.nodeService.nodeUrl ? 'success' : 'danger' }} shadow mb-3">
             <div class="card-header" routerLink="/node">Node status</div>
-            <div class="card-body card-text text-danger">
+            <div class="card-body card-text text-{{ this.nodeService.nodeUrl ? 'success' : 'danger' }}">
                 <small>Status</small>
-                <h5>Not connected</h5>
-                <small>Connected to</small>
-                <h5>192.168.1.50:3000</h5>
+                <h5>{{ this.nodeService.nodeUrl ? 'Connected' : 'Not connected' }}</h5>
+                <div *ngIf="this.nodeService.nodeUrl">
+                    <small>Connected to</small>
+                    <h5>{{ this.nodeService.nodeUrl }}</h5>
+                </div>
             </div>
         </div>
     </div>
