--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -2,13 +2,13 @@
     <a class="navbar-brand px-3 py-2" routerLink="/">Blockchain</a>
 
     <ul class="navbar-nav px-3">
-        <li class="nav-item text-nowrap">
+        <li class="nav-item">
             <a class="nav-link btn" (click)="logout()">Logout</a>
         </li>
     </ul>
 </nav>
 
-<div class="row">
+<div>
     <main class="col-md-9 mx-md-auto col-lg-10 px-md-4 px-4 py-3">
         <router-outlet></router-outlet>
     </main>
