--- a/src/app/components/new-transaction/new-transaction.component.html
+++ b/src/app/components/new-transaction/new-transaction.component.html
@@ -1,1 +1,101 @@
-<p>new-transaction works!</p>
+<div class="modal-header">
+    <h5 class="modal-title">New transaction</h5>
+    <button class="close" (click)="modal.dismiss()">&times;</button>
+</div>
+<form class="modal-body" (ngSubmit)="onSubmit()">
+
+    <div class="form-group">
+        <small>Reciever Address</small>
+        <textarea ngbAutofocus class="form-control" style="resize: none;" name="recAddress"
+            [(ngModel)]="transaction.to"></textarea>
+    </div>
+
+    <div class="row">
+        <div class="col-md-6 form-group">
+            <small>Coins</small>
+            <div class="input-group">
+                <input type="number" min="0" class="form-control" name="coins" [(ngModel)]="transaction.amount">
+                <div class="input-group-append">
+                    <span class="input-group-text">max: 20</span>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-md-6 form-group">
+            <small>Masks</small>
+            <div class="input-group">
+                <input type="number" min="0" class="form-control" name="masks" [(ngModel)]="transaction.extras.masks">
+                <div class="input-group-append">
+                    <span class="input-group-text">max: 20</span>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-md-6 form-group">
+            <small>Respirators</small>
+            <div class="input-group">
+                <input type="number" min="0" class="form-control" name="respirators"
+                    [(ngModel)]="transaction.extras.respirators">
+                <div class="input-group-append">
+                    <span class="input-group-text">max: 20</span>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-md-6 form-group">
+            <small>Volunteers</small>
+            <div class="input-group">
+                <input type="number" min="0" class="form-control" name="volunteers" [(ngModel)]="transaction.extras.volunteers">
+                <div class="input-group-append">
+                    <span class="input-group-text">max: 20</span>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-md-6 form-group">
+            <small>Doctors</small>
+            <div class="input-group">
+                <input type="number" min="0" class="form-control" name="doctors" [(ngModel)]="transaction.extras.doctors">
+                <div class="input-group-append">
+                    <span class="input-group-text">max: 20</span>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-md-6 form-group">
+            <small>Ventilators</small>
+            <div class="input-group">
+                <input type="number" min="0" class="form-control" name="ventilators"
+                    [(ngModel)]="transaction.extras.ventilators">
+                <div class="input-group-append">
+                    <span class="input-group-text">max: 20</span>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-md-6 form-group">
+            <small>Hazmats</small>
+            <div class="input-group">
+                <input type="number" min="0" class="form-control" name="hazmats" [(ngModel)]="transaction.extras.hazmats">
+                <div class="input-group-append">
+                    <span class="input-group-text">max: 20</span>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-md-6 form-group">
+            <small>Researches</small>
+            <div class="input-group">
+                <input type="number" min="0" class="form-control" name="researches" [(ngModel)]="transaction.extras.researches">
+                <div class="input-group-append">
+                    <span class="input-group-text">max: 20</span>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="d-flex">
+        <button type="button" class="btn btn-outline-secondary ml-auto" (click)="modal.dismiss()">Cancel</button>
+        <button type="submit" class="btn btn-primary ml-2">Send</button>
+    </div>
+</form>
