Minor styling changes

--- a/src/app/components/transactions/transactions.component.html
+++ b/src/app/components/transactions/transactions.component.html
@@ -1,4 +1,4 @@
-<h1 class="h2">
-    <a class="material-icons nav-link" routerLink="/">chevron_left</a>
+<h1 class="h2 mb-4">
+    <a class="material-icons btn btn-lg btn-outline-dark" routerLink="/">chevron_left</a>
     Transactions
 </h1>
