--- a/src/app/components/node/node.component.html
+++ b/src/app/components/node/node.component.html
@@ -1,5 +1,5 @@
 <h1 class="h2 mb-4">
-    <a class="material-icons nav-link" routerLink="/">chevron_left</a>
+    <a class="material-icons btn btn-lg btn-outline-dark" routerLink="/">chevron_left</a>
     Node
 </h1>
 
