--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -3,13 +3,22 @@
 <div class="row">
     <div class="col-lg-4">
         <div class="card border border-primary shadow mb-3">
+            <div class="card-header">{{ this.wallet.username }}'s wallet</div>
             <div class="card-body">
-                <small class="card-text">Username</small>
-                <h5 class="card-title">{{getUsername()}}</h5>
-                <small class="card-text">Wallet address</small>
-                <textarea class="form-control form-control-sm" readonly
-                    style="resize: none;" rows="4">{{ this.wallet.getPublic() }}</textarea>
+                <small class="card-text">Address</small>
+                <textarea class="form-control form-control-sm mb-2" readonly style="resize: none;"
+                    rows="4">{{ this.wallet.getPublic() }}</textarea>
             </div>
+            <ul class="list-group list-group-flush">
+                <li class="list-group-item">{{ nodeService.balance.amount }} Coins</li>
+                <li class="list-group-item">{{ nodeService.balance.extras.masks }} Masks</li>
+                <li class="list-group-item">{{ nodeService.balance.extras.respirators }} Respirators</li>
+                <li class="list-group-item">{{ nodeService.balance.extras.volunteers }} Volunteers</li>
+                <li class="list-group-item">{{ nodeService.balance.extras.doctors }} Doctors</li>
+                <li class="list-group-item">{{ nodeService.balance.extras.ventilators }} Ventilators</li>
+                <li class="list-group-item">{{ nodeService.balance.extras.hazmats }} Hazmats</li>
+                <li class="list-group-item">{{ nodeService.balance.extras.researches }} Researches</li>
+            </ul>
         </div>
 
         <div class="card border-{{ this.nodeService.nodeUrl ? 'success' : 'danger' }} shadow mb-3">
@@ -32,15 +41,19 @@
                 <a class="btn btn-sm btn-outline-primary ml-2" routerLink="/transactions">More</a>
             </div>
             <div class="card-body p-0">
-                <table class="table m-0">
+                <table *ngIf="nodeService.transactions.length > 0" class="table m-0">
                     <tbody>
-                        <tr>
-                            <td>Who</td>
-                            <td>When</td>
-                            <td>What</td>
+                        <tr *ngFor="let tx of nodeService.transactions">
+                            <td>{{ tx.from }}</td>
+                            <td>{{ tx.to }}</td>
+                            <td>{{ tx.amount }}</td>
+                            <td>{{ tx.extras }}</td>
                         </tr>
                     </tbody>
                 </table>
+                <div class="d-flex">
+                    <span *ngIf="nodeService.transactions.length === 0" class="h5 text-muted m-3 mx-auto">No transactions</span>
+                </div>
             </div>
         </div>
     </div>
