--- a/src/app/components/new-transaction/new-transaction.component.html
+++ b/src/app/components/new-transaction/new-transaction.component.html
@@ -24,7 +24,7 @@
         <div class="col-md-6 form-group">
             <small>Masks</small>
             <div class="input-group">
-                <input type="number" min="0" class="form-control" name="masks" [(ngModel)]="transaction.extras.masks">
+                <input type="number" min="0" class="form-control" name="masks" [(ngModel)]="transaction.masks">
                 <div class="input-group-append">
                     <span class="input-group-text">max: 20</span>
                 </div>
@@ -34,8 +34,7 @@
         <div class="col-md-6 form-group">
             <small>Respirators</small>
             <div class="input-group">
-                <input type="number" min="0" class="form-control" name="respirators"
-                    [(ngModel)]="transaction.extras.respirators">
+                <input type="number" min="0" class="form-control" name="respirators" [(ngModel)]="transaction.respirators">
                 <div class="input-group-append">
                     <span class="input-group-text">max: 20</span>
                 </div>
@@ -45,7 +44,7 @@
         <div class="col-md-6 form-group">
             <small>Volunteers</small>
             <div class="input-group">
-                <input type="number" min="0" class="form-control" name="volunteers" [(ngModel)]="transaction.extras.volunteers">
+                <input type="number" min="0" class="form-control" name="volunteers" [(ngModel)]="transaction.volunteers">
                 <div class="input-group-append">
                     <span class="input-group-text">max: 20</span>
                 </div>
@@ -55,7 +54,7 @@
         <div class="col-md-6 form-group">
             <small>Doctors</small>
             <div class="input-group">
-                <input type="number" min="0" class="form-control" name="doctors" [(ngModel)]="transaction.extras.doctors">
+                <input type="number" min="0" class="form-control" name="doctors" [(ngModel)]="transaction.doctors">
                 <div class="input-group-append">
                     <span class="input-group-text">max: 20</span>
                 </div>
@@ -65,8 +64,7 @@
         <div class="col-md-6 form-group">
             <small>Ventilators</small>
             <div class="input-group">
-                <input type="number" min="0" class="form-control" name="ventilators"
-                    [(ngModel)]="transaction.extras.ventilators">
+                <input type="number" min="0" class="form-control" name="ventilators" [(ngModel)]="transaction.ventilators">
                 <div class="input-group-append">
                     <span class="input-group-text">max: 20</span>
                 </div>
@@ -76,7 +74,7 @@
         <div class="col-md-6 form-group">
             <small>Hazmats</small>
             <div class="input-group">
-                <input type="number" min="0" class="form-control" name="hazmats" [(ngModel)]="transaction.extras.hazmats">
+                <input type="number" min="0" class="form-control" name="hazmats" [(ngModel)]="transaction.hazmats">
                 <div class="input-group-append">
                     <span class="input-group-text">max: 20</span>
                 </div>
@@ -86,7 +84,7 @@
         <div class="col-md-6 form-group">
             <small>Researches</small>
             <div class="input-group">
-                <input type="number" min="0" class="form-control" name="researches" [(ngModel)]="transaction.extras.researches">
+                <input type="number" min="0" class="form-control" name="researches" [(ngModel)]="transaction.researches">
                 <div class="input-group-append">
                     <span class="input-group-text">max: 20</span>
                 </div>
