Changed transaction structure

--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -58,13 +58,13 @@
                             </td>
                             <td>
                                 <div class="d-flex flex-wrap">
-                                    <div class="px-3">{{ tx.clicks }} clicks</div>
-                                    <div class="px-3">{{ tx.masks }} masks</div>
-                                    <div class="px-3">{{ tx.respirators }} respirators</div>
-                                    <div class="px-3">{{ tx.volunteers }} volunteers</div>
-                                    <div class="px-3">{{ tx.doctors }} doctors</div>
-                                    <div class="px-3">{{ tx.ventilators }} ventilators</div>
-                                    <div class="px-3">{{ tx.researches }} researches</div>
+                                    <div class="px-3">{{ tx.data.clicks }} clicks</div>
+                                    <div class="px-3">{{ tx.data.masks }} masks</div>
+                                    <div class="px-3">{{ tx.data.respirators }} respirators</div>
+                                    <div class="px-3">{{ tx.data.volunteers }} volunteers</div>
+                                    <div class="px-3">{{ tx.data.doctors }} doctors</div>
+                                    <div class="px-3">{{ tx.data.ventilators }} ventilators</div>
+                                    <div class="px-3">{{ tx.data.researches }} researches</div>
                                 </div>
                             </td>
                         </tr>
