--- a/src/app/components/new-transaction/new-transaction.component.html
+++ b/src/app/components/new-transaction/new-transaction.component.html
@@ -14,7 +14,7 @@
         <div class="col-md-6 form-group">
             <small>Clicks</small>
             <div class="input-group">
-                <input type="number" min="0" class="form-control" name="coins" [(ngModel)]="transaction.clicks">
+                <input type="number" min="0" class="form-control" name="coins" [(ngModel)]="transaction.data.clicks">
                 <div class="input-group-append">
                     <span class="input-group-text">max: 20</span>
                 </div>
@@ -24,7 +24,7 @@
         <div class="col-md-6 form-group">
             <small>Masks</small>
             <div class="input-group">
-                <input type="number" min="0" class="form-control" name="masks" [(ngModel)]="transaction.masks">
+                <input type="number" min="0" class="form-control" name="masks" [(ngModel)]="transaction.data.masks">
                 <div class="input-group-append">
                     <span class="input-group-text">max: 20</span>
                 </div>
@@ -34,7 +34,7 @@
         <div class="col-md-6 form-group">
             <small>Respirators</small>
             <div class="input-group">
-                <input type="number" min="0" class="form-control" name="respirators" [(ngModel)]="transaction.respirators">
+                <input type="number" min="0" class="form-control" name="respirators" [(ngModel)]="transaction.data.respirators">
                 <div class="input-group-append">
                     <span class="input-group-text">max: 20</span>
                 </div>
@@ -44,7 +44,7 @@
         <div class="col-md-6 form-group">
             <small>Volunteers</small>
             <div class="input-group">
-                <input type="number" min="0" class="form-control" name="volunteers" [(ngModel)]="transaction.volunteers">
+                <input type="number" min="0" class="form-control" name="volunteers" [(ngModel)]="transaction.data.volunteers">
                 <div class="input-group-append">
                     <span class="input-group-text">max: 20</span>
                 </div>
@@ -54,7 +54,7 @@
         <div class="col-md-6 form-group">
             <small>Doctors</small>
             <div class="input-group">
-                <input type="number" min="0" class="form-control" name="doctors" [(ngModel)]="transaction.doctors">
+                <input type="number" min="0" class="form-control" name="doctors" [(ngModel)]="transaction.data.doctors">
                 <div class="input-group-append">
                     <span class="input-group-text">max: 20</span>
                 </div>
@@ -64,7 +64,7 @@
         <div class="col-md-6 form-group">
             <small>Ventilators</small>
             <div class="input-group">
-                <input type="number" min="0" class="form-control" name="ventilators" [(ngModel)]="transaction.ventilators">
+                <input type="number" min="0" class="form-control" name="ventilators" [(ngModel)]="transaction.data.ventilators">
                 <div class="input-group-append">
                     <span class="input-group-text">max: 20</span>
                 </div>
@@ -74,7 +74,7 @@
         <div class="col-md-6 form-group">
             <small>Researches</small>
             <div class="input-group">
-                <input type="number" min="0" class="form-control" name="researches" [(ngModel)]="transaction.researches">
+                <input type="number" min="0" class="form-control" name="researches" [(ngModel)]="transaction.data.researches">
                 <div class="input-group-append">
                     <span class="input-group-text">max: 20</span>
                 </div>
@@ -82,7 +82,8 @@
         </div>
     </div>
 
-    <div class="d-flex">
+    <div class="d-flex align-items-center">
+        <span class="text-danger">{{ error }}</span>
         <button type="button" class="btn btn-outline-secondary ml-auto" (click)="modal.dismiss()">Cancel</button>
         <button type="submit" class="btn btn-primary ml-2">Send</button>
     </div>
