--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -21,7 +21,11 @@
         </div>
 
         <div class="card border-{{ this.nodeService.nodeUrl ? 'success' : 'danger' }} shadow mb-3">
-            <div class="card-header" routerLink="/node">Node status</div>
+            <div class="card-header d-flex align-items-center">
+                <span class="mr-auto">Node status</span>
+                <button class="btn btn-sm btn-secondary" (click)="this.nodeService.refreshData()">Refresh</button>
+                <a class="btn btn-sm btn-outline-secondary ml-2" routerLink="/node">Settings</a>
+            </div>
             <div class="card-body card-text text-{{ this.nodeService.nodeUrl ? 'success' : 'danger' }}">
                 <small>Status</small>
                 <h5>{{ this.nodeService.nodeUrl ? 'Connected' : 'Not connected' }}</h5>
@@ -32,12 +36,12 @@
             </div>
         </div>
     </div>
+
     <div class="col-lg-8">
         <div class="card border shadow">
             <div class="card-header d-flex align-items-center">
                 <span class="mr-auto">Transactions</span>
                 <button class="btn btn-sm btn-primary" (click)="openTransactionModal()">New</button>
-                <a class="btn btn-sm btn-outline-primary ml-2" routerLink="/transactions">More</a>
             </div>
             <div class="card-body p-0">
                 <table *ngIf="nodeService.transactions.length > 0" class="table table-hover text-center m-0">
@@ -49,7 +53,7 @@
                       </tr>
                     </thead>
                     <tbody>
-                        <tr *ngFor="let tx of nodeService.transactions">
+                        <tr *ngFor="let tx of nodeService.transactions" class="{{ tx.validated ? '' : 'table-warning' }}">
                             <td class="col-2">
                                 {{ tx.sender == wallet.getPublic() ? 'You' : '...' + tx.sender.substr(tx.sender.length - 5) }}
                             </td>
@@ -57,14 +61,14 @@
                                 {{ tx.reciever == wallet.getPublic() ? 'You' : '...' + tx.reciever.substr(tx.reciever.length - 5) }}
                             </td>
                             <td>
-                                <div class="d-flex flex-wrap">
-                                    <div class="px-3">{{ tx.data.clicks }} clicks</div>
-                                    <div class="px-3">{{ tx.data.masks }} masks</div>
-                                    <div class="px-3">{{ tx.data.respirators }} respirators</div>
-                                    <div class="px-3">{{ tx.data.volunteers }} volunteers</div>
-                                    <div class="px-3">{{ tx.data.doctors }} doctors</div>
-                                    <div class="px-3">{{ tx.data.ventilators }} ventilators</div>
-                                    <div class="px-3">{{ tx.data.researches }} researches</div>
+                                <div class="d-flex flex-wrap justify-content-around">
+                                    <div *ngIf="tx.data.clicks" class="px-3">{{ tx.data.clicks }} clicks</div>
+                                    <div *ngIf="tx.data.masks" class="px-3">{{ tx.data.masks }} masks</div>
+                                    <div *ngIf="tx.data.respirators" class="px-3">{{ tx.data.respirators }} respirators</div>
+                                    <div *ngIf="tx.data.volunteers" class="px-3">{{ tx.data.volunteers }} volunteers</div>
+                                    <div *ngIf="tx.data.doctors" class="px-3">{{ tx.data.doctors }} doctors</div>
+                                    <div *ngIf="tx.data.ventilators" class="px-3">{{ tx.data.ventilators }} ventilators</div>
+                                    <div *ngIf="tx.data.researches" class="px-3">{{ tx.data.researches }} researches</div>
                                 </div>
                             </td>
                         </tr>
