--- a/src/app/components/node/node.component.html
+++ b/src/app/components/node/node.component.html
@@ -81,4 +81,67 @@
             </div>
         </div>
     </div>
+
+    <hr class="my-4">
+
+    <div class="row m-0">
+        <div class="col-lg-6">
+            <div class="card border shadow">
+                <div class="card-header d-flex align-items-center">
+                    <span class="mr-auto">Logs</span>
+                    <button class="btn btn-sm btn-primary" (click)="nodeService.refreshLogs()">Refresh</button>
+                </div>
+                <div class="card-body p-0">
+                    <table class="table table-hover text-center m-0">
+                        <thead>
+                          <tr>
+                            <th>Method</th>
+                            <th>Url</th>
+                            <th>Status</th>
+                            <th>Remote address</th>
+                          </tr>
+                        </thead>
+                        <tbody>
+                            <tr *ngFor="let log of nodeService.logs" class="table-{{ log.status/100 < 4 ? 'success' : 'danger' }}">
+                                <td>{{ log.method }}</td>
+                                <td>{{ log.url.substr(0,20) + (log.url.length >= 20 ? '...' : '') }}</td>
+                                <td>{{ log.status }}</td>
+                                <td>{{ log.remote_addr }}</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-lg-6">
+            <div class="card border shadow">
+                <div class="card-header d-flex align-items-center">
+                    <span class="mr-auto">Failed transactions</span>
+                    <button class="btn btn-sm btn-primary" (click)="nodeService.refreshLogs()">Refresh</button>
+                </div>
+                <div class="card-body p-0">
+                    <table class="table table-hover text-center m-0">
+                        <thead>
+                            <tr>
+                              <th>Method</th>
+                              <th>Url</th>
+                              <th>Status</th>
+                              <th>Remote address</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr *ngFor="let log of nodeService.ftlogs" class="table-danger">
+                                <td>{{ log.method }}</td>
+                                <td>{{ log.url }}</td>
+                                <td>{{ log.status }}</td>
+                                <td>{{ log.remote_addr }}</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        </div>
+    </div>
+
 </div>
